--- a/mgutab.d/25-doujin-oneshot-and-serial.1
+++ b/mgutab.d/25-doujin-oneshot-and-serial.1
@@ -1,25 +1,26 @@
 begin-base64 600 -
-KLUv/QRY9R4AekCsDUPwzEwHWwoQh8VhcYpeA+ggxPioJwn4NcBysc05A3Sw
-o3Oi3zfYt1A3J9zdav6tAlaRx3CklDLJLTXa2pjmsDjxKQIP0ADIAMoAErGT
-+OmENEIbCHYxGxWyfWJZv6+CsZPoo+orVa7FjCCqvCFlp3I9Gg9iq0b7Vy2V
-85sX5pJXMO2jd4mQA5JpAcWIKq/I8qejq9EXZBpHIn7AsGNe2v8pnlOCcvQu
-8X0ZoAYbIdGn03rJtNOu2fbsY1O4yT6/O/9a/NWwIxyROkxhCRTaiLnJJTJi
-hw+jv5QX02nrTAiRdcovuRHESYbh9XxE3eJCQSw34rS2z5/4glbeD0DSCIEm
-RHg8nggLHBwRliNSiNx2LbZ3ux5KlTseT7F8U9EzWb6dZN5udEv/5/+9lfqE
-qpZNWqIOJ074V6sFv/tXMtDw0XtLRcNsWfXSMddueWmaS7e8tFtL8Z1Svv0O
-uoxCk0FU+4KJ/mBgVBioGGCBgcIaVyhkt7jOfzrrRKWMOazx01FR5RmSXKLr
-oVJGr3dSiUGQxBGaIrBsWaYmrkr2CU1GOekWb4O4iS6vnFeC39uTK59c2VQS
-QJFhKoUjUykcUZhKAkyl8OLTMZXCC1MpdFolrphe+jY1evWi3VZc7ZyfnNUD
-9EEbIcdGaEaWXbLsFfyf+KsgLmT8YBlXqayzZf/o98lZ73yPhpR4qo2eTwcE
-r0eSyji8HmrXo9F2zm7b4HaFlyYJsf1ea+lfOmtNTDyR5U/HBGa0sLJpXNnC
-yrax7BGXdqnRLd62ofYGDiMPJ+dkGGVetNu3ck761Z/A2TbOtnO7HUvZKZER
-RIMO+aAnHNdb65zyWpgRHVMi0k6iU1lf3vtNVS3PbvSnc7LLMxq2ik3DXrJL
-cOIH5fSYLkObZdg3tNHv93PWa9/uAhGj6jgbrapllK7n1tavk4LXXr997JwY
-ceXSq5vsT+sELQbBeR3UAQofzGB6xGQ7gP/wrPUDJTiDyayTdnnpkQqi32lt
-/Sv/OcKOUKlCAqmABwcEn/c/KT+MwSeJRKDQAccXfExBi6uU7qERikQmUQhK
-4Hfi7yn+tyrZWMv1WCw7BjN+0IhOP/mP57+1/jMjdFFBwGm1tMoLyimj64m0
-aJecDrHR/vQfU1xrjsM4a4ksN81y0zeWTuV6jmW9uM4PKCAwAiIwkqFjwUJM
-Lnk2CPKObJG0hd+2jAiWhRv7yJX8FqmaDPAWSUZAE2ZrFGbrucmLb7ZT89zX
-yqsz0IeNiUGw4WcCEUaDvDgNVxl/96MpvQ1SJK7SAbuLTriElTQ4xCgpWrY6
-THqIS2LJMJwzGd3xhQ==
+KLUv/QRYLSAAWkM0DkPgrkwbJPqJMcYYY9wzC0j+7e0Gcx+3VadRFIaDtC0J
+T/4JjjzXymebUoEAEpzk/cRNGvyJ7E1Lq3XBQI1jGGN4yg4H2ADTANEAtuJq
+54xyVg/gIoEcjUfDs7EAB9ulj+0Tyxpj9Vwk0EHVU6c8g4UcTrkEaptsOxcU
+4ApGe6yWyhnnRUnJKRTtoPcAngmhEYQLkFM2eWWO5gajQbz0SwiYIsSGnWj/
+p3hO6UnQe4AYH3QkbHg+HM1KJctIe0bbMY+tQSb7jHf+tTjWr+MDhTpGn6jj
+2YDJZBEW8ESK0F/Ki+m0tWUFqCJlFVuogiSv5HYOon4gw4HLFupW2+dPfD0r
+7w8IaXg6GABsNhsAB3Q6EGUGvPBQ2zPXxuF2pVPWbDYBM8N0FllMxJaRhX7j
+z1mvfYtz5VqJjr1yjSTncKFb+j//763ULU6zPLICby+ghcdarRfvXxlBw0Hv
+qxKNQsunE+1q7REnWtbSI060W0vxnVK+/RO3/MElczhtECOa06ABRgKMAgca
+fFCFJhqyW1znP511llDhjCrkaEpOuSUki9x2JVTo9U4qseeFOL6RBRUts8zA
+lMgmcckfSHqV2ypqoMsr55VefEtqZVIrj0QELh6MRB9oJPpAFyMRgZHoy+Bo
+RqIvYyT6nFaJK6aXfgyMTqloD0//McW12kyEsRXIqmlWTddU2mTbOZb14jqf
+fmfj49jwtLxy65W9ev8Tx+q9fIQerDBlyjda9khjlLPe+RsSJpA0CzccjYrc
+LsSUdbldCbeTyfYMbse87A0nOmTF9nutpX/prDAukOSVOZqRlbCDyXZp5Q4m
+m8baIC2dAqNXuU0r7RImwpwuz4gIWVS027dyThrrW7zQ9gtt23DbhdomDyEH
+EvojhbZwXG+tc8prV0A0TASUkUCnsr68N87TLMdkNEdDgsstJHYJTaOoZJfe
+xO/JAEDWdbAcQreL4cAcaudQ2+SVXUor751PrYjUprF2KQX0eOWsWOIYfZrl
+0m3n1tavk3rXXq957BkYmGrplEz2p3V6FnvevN7p6HwUYigaZGS7gI941ho9
+6cVWsoqkU040yAbQ77S2/pX/HF+HR4RxIYQgA0cFn/ejlBFj70OfT8ejwPH1
+HlPP4iqlZ9D4Pp/R5+sw8DtxfIr/7ekVzmw7FWu7VkIPF9BplP94/lvrPx94
+MjAMOK2WVnk9OVluOw8jdIpNf8RoDyogMAIiMJKhY0JbSLljg5fAXPJWEOTF
+2SJpC79tGREsCzf2kSv5LVI1GeAtkoyAJszWKMzWc5MX32yn5rmvlVdnoA8b
+E4Ngw88EIowGeXEarjL+7kdTehukSFylA3YXnXAJK2lwiFFStGx1mPQQl8SS
+YThnymF5MA==
 ====
