--- a/mgutab.d/25-oc-oneshot.1
+++ b/mgutab.d/25-oc-oneshot.1
@@ -1,20 +1,21 @@
 begin-base64 600 -
-KLUv/QRY1RgAVvOvQQDLqg0kZayqqqqqLgxbc3MUA3eK7JmbbBsQNrzF1COK
-8RDf/fd9fP3Fc5Krj2UgWsL5E9nd3V3XAq/V//8rYnkIoACdAJ8AeO8dITSU
-Ek6yAkOjf7Vew2Tc6wt9egjFX97HkXi0G1usK65Uo0o8hUMQSv1phK9YIAUS
-HiWd2mZd8/x4dJfrA/l0TvUd1cdL9672aolvhPhsL5xRyBrhHNsLJnuN+mvU
-Qzh8Hd7HiUCXUhgvtjrPiye9sBGU4ho++MnkOxaP1W69Kb4XB9hUWCiQ8KBp
-2gMBGAwccQEBdFY9heqaTaZpAfjinLlSCOM6SfQk0Udb851SYk2llC7dm1g+
-Q+jjlNdSWufMGHtvlNa3pYAZJWFGSAeROogEbGl9xMnkOR0Pcn0RMdM95565
-aoktpjQAhqZCo5ESNg80mGyk8S0U+IkId3W+w/tiKnACxQtRp49ST52t3fZ2
-3WMyVgeOC++6Z3WIt149N6634gjBwdBLHByTWUwoWHBASwkBkep66w7b0god
-mKHCa4xCltZHmS3dO+NaNVSJf1ofzPQgoNcyiUmBySBEcCAxKTZxakr1rPnS
-lPdxr69jg7NMALPN857oMZmBTCaTyVB4oo/0UryvphZHaGzg5vkUqnNAPCLW
-jaWVGE+qsYGex1FKOKoUljxcZAWeqHQMBgkaWEDYTEQpZ6XS4npTXmhRsaGI
-VM9dZa3W5fo8OiGM6y6kMO56tQ4PFziumN5zdRjXo72y5oz3XrHACy2O6nhG
-SD99gJ6Pf014z8dzbC8d0Fv5KPGkuNL62eAllVCFA99AEsYLHQsQGCCgQOaC
-SLh5X7x5Z6qvzFNLeV/MFKacvsXRtSx1EoI+vKXrGx7dtOKwWI/5Yq3pxjqv
-mD628qpPj/pSPamlOueoMvkTEB778DgzrvPmeXFnAdSA4pHKOvOcAR8AzxZ9
-dCRDHW2Vx3iyiz3sKygR4djg+G5hhjFEZ4TRoREbvaoV7v5Zs0cWBEEUiUJR
-aqEAWJdPrTC87V7BaMUnRKzSl5sGrQEJuBosjOFRGzsropFkag9iLned
+KLUv/QRYVRkAhvSzQQDLqg0kZayqqqqqDBS11WKqqTtF9sxNtg0IG95i6hHF
+eEBmj1YwXPHRQhGr85aBsyWcP5Hd3d11LfBa/f+/IpaHogCgAKIA9daN994R
+gltB4SctcFR6Gey5zNbJvlGoj1Rc5n2diUe7scW64kq16sRZOgWj1adMeOsF
+UjjhUdKpbdY1z1BIj8W+kVDvWP9hfbx072qvlvhGiFAnxlMKXyb8oxOT2WSl
+Lit1Eg4fiPd1JLB2CuPFVud58aQYNopWXIMIT6W868VjtVtviu/FATgVFxYS
+HjiOeygwm4EmNRDAp9VXqr7hbBwXpjDuerXGF+fcncJZ102kN5E+2prvlBJr
+KqWsuR718hlGH6e8ltI6Z97Ye6/Avg4LyIEScpB0kamLTkAY2EekUt4D8qLY
+FxEz3XPumauW2GJKA2xsKjYbKYGTsclspY6HocBVSnjs8yDeR2OBEyteqEp9
+lHrqbO221+X6zPbq4Klxl+tfHeKtV8+N6604Qngw9NMHz2wXExYMEmgpISBS
+HaAGFY9U1pnn3JZWcIEZKnxHKXyBfZTZ0r0zrpVTnXgI9s1QPyJ6bpOYFJkN
+gsYDiUnBiVNTqmfNl668r5N9IB78ZQK4dUDvkT6zIdBoNBoNhUf6SC/F+2pq
+cURHB+yAfqXqHhGPiHVjaSXGk3Z0QM/jKyhcdQpPIF7SAlVa+kaDBQ4uIHAm
+opSzUmlxvSsvvKjgUESq566yVhuLfSGfcNb1Wg8YOmZYRMhYoHEgQ4MzIM5s
+N9V55+nF+qzr0V5Zc8Z7t17gBRhXuTgHSU+JgCCRl014kMh/dGI+oOfyUeJJ
+caU15MFPLWELB77hJIwYOhooQECAAc2FkrDjffHmnam+Mk9u5X00VMiSethH
+57aVSigKcRhX9wjpqBaf0XrMF2tNN9bZBfU0l2eFetSX6kkt1TlHVsqrjHBa
+iMeZcZ03z4tdFgIgIFBi0tEdiDzWs+mjow11NJTHeOxiZ19hRITd4HhsYQYN
+0RmMDs0bPWu9u380e+QQPIoEUJQCCgC5fArC8Pa9grfiQ8SqvdxUWoMEV4M9
+hseNnSUaSab2w3qwog==
 ====
