--- a/mgutab.d/30-oc-illust.1
+++ b/mgutab.d/30-oc-illust.1
@@ -1,40 +1,42 @@
 begin-base64 600 -
-KLUv/QRY3TQAenKMF0bgzEwbMI9I5AQyzDDDDDQcR95n0ZdWK2PyLQZ8g32r
-AYelkKn1Gw4vT/47vFzSHAY/2VRchrSU3d3dPRKrGTEYxhhD17gQZAFqAWYB
-A0YgEIGNDR06YPiRfdhq35TsVmx8XLXUYK7Wvlx2ztdjOtG00nEqrksZZzj+
-UlYsdbXWBsj57Vptfzyhk0qfAeknld6iEz7GGdTYglcABwdHBlKC0EuZcZYZ
-T2xjbVEFkUaDl1JaXW/FNLuwJ+Oo3+aliCO98CXWetpKLWWJ7V9Kp+3Cj9Wm
-7cIZHXGFFz54M5UTvPOagHEUj26LjTcR/CWVc947QZeVTgLGX2b4g1TLe3XN
-tr4thYNIpZIGDRQM/LUYy4sxxi0r48fOzlntEjB7RSW+ldPOSjOWOdomodm2
-Fy579ZQR4+Mq8dRa144TKXyvrnIi/JH9UCijVAq9vtliW6u19ymdrplOMuNP
-s7wUtNOO7KdWmyTWQanVxqnEGBPHvXSSWP+srbU144ovYPyofgAOJQ4cRKOQ
-6IMGho9n4ppFGDY0RqWXWU46L2gtgRKGSAMEgIqKCgAJdi6eUfJUVAQdVBqJ
-MGx8PCZGxJTfOMILTXScl+oicHoLjD+lMuM8p7YsuO0KGXc7XqPjXyeuoJZa
-TgcWHCIGGxscBT7nmW2W1V6cSsSpRJ2U/vHEsDhMpN8+eIuJg7h2DtZzvN1h
-Ej9fXfPUoAxR2zUw/OOxCL06xluIfYLDXU79BYf7YuOD2IKaTm0vSC/0vbrv
-1XE++GoX2mR8pyZ+znhOLbG0OLguswtTshwd5/1EGI/xpNJxuG2T7a8WvJpm
-aScKCd66bZCJEVHGwnM3XtuNsBb+0maQ0pr1LWF44PYvtnu+fRPBX2MJzjun
-yrdZYltG2zsnL71uMo2gE7ReQ+Eg1GtEuemrXfiyMo60tium22TGj6dDCcPG
-2jCRDuLrT6nEmlacbQeNDY0IIZLor7xWyms1raFtEJJ+0gtbOsbH81aZMa34
-ShAMOUhw4CLCW33n1TjrSyKRSCRRhpKGr1SDulZJQRoaRBZKHDaASBkDAtXD
-hIKl1n9UX8bERVJ8RIxY4usxG/5XT6uzxRaHShlKGygseBDUVOua64QPE0Jq
-9gyFf7ZUgnbqinG4feKJMyTGm07k4cSPB8W1VU6EMb2OUmKM6fWQ1XaF4DyP
-/pZSebUEpdWfs9qoEWPKQ5S1xJ93avBea6/Mj4NadvrHE0qxcZkff1sztrPK
-Xi+8gPEj+7kbr9HxmA2P2fAHa7VgthrP34ju0xFHaPjOyVjx8YiY2CUz/lbr
-CWpKJcVBGU0n9iwnfjyo10jDcd6vq379QV0nqO+1lv6KjZizEW2ybaIT7m7b
-BoV/rhTPKe3OaZfEekmsW7wGJaUZlPhyyE9wYaDAhYTdzchKEb9SOXHWNWMS
-XmiLja3bDqltllp/i22dGbzUhrTsj8dEJ9Rx7dmrr3qiL8dzdLw26zIy/lNW
-Clo6ryWRChS4uDBg4MGDp2DOFcQZ3wAVH6gt0+uuFs5S6xUemWy0fQQARvdH
-mGyQXgiT4iuQvasRV7vQZYaL7MK/Gsy2alprJvvE6qGnmeaKQX2n79VLWtyH
-02swzoIZaa39I/ypkF0Dw0N8/aesd2IraYr7Xr3XCzNKKK7d6m0RW//RfRAo
-GBHGRaSpjR8k+ym9ONeq8dw5GU++fkNxFRWHtXZOhXuI9Kf2aittxieVTlMb
-M0o/um/T2jatPWNtGkz8jCmV1VYtYkKR4oW+XXiTEmesrTKh+BEoX5fjMzJO
-g9qSXjolC2b81Yi9XogAQgQFJ5VuouM6tT0iQ9s/ut8T2SMsjvLYIXb75cIf
-T61n1jPbX49JdRG0PXLSn14JZmrntLfYtlH1GS9MxYirjvGX0k270GWlk6Dt
-lg1/8E7wUn0xDm14IIlGJQePQUw1ndOC5maLFlg8qO+sINVX3kiMMrTd8vWb
-nP0S3ylnlvOqTjYL1Wev/kGyays8RyeWgIwlIOPXm2e10wZFqEEIASEkAiI0
-REAEhjnnmGcHIAJCCGVYBxAaQhx53W6RpaEsXzCnhNlIYeY578vQBY8h/sGn
-F9ST0fqxm4GaBrF/5kWbIS0Uptf+Nf5YqJZ/NcF5Jt1zVcgREzkJ7bKmFnI4
-0k5cUHsCt17c+WLc4gji5XV/xmg6npm6PZLwAOw3aiFDVJAugec0EtkyrDax
-khgEIWiyfvcPnj2Ay2gMViPNMVsYnQcjZiSSOHQ6cPQsuAqKziov
+KLUv/QRYrTYAqnZYGEbgzEwbMI9I5AQyzDDDDDQkALxNAi+tVsfkWwyIgaur
+BhyWQqbWbzi8PPnv8Go5JnJ05MVgMchAdnd390iPJ8QYMcbirnEhcgF3AXEB
+ulZJQRcdRBlKHzyASBYECIxAoAIYHkCA2PAj+6/VrhnZrdj4uGqpwVytda3s
+nK/HdKIJpeNUXAcbZzj+UlYsdbXWBsD57Vptfzyh00mP6eink66iEz7GGdTY
+gldARkYGB9KC0EuZcZYZT2xjbREG0cWDl1JaXW/FMruwJ+Oo3+bBRJBe+BJr
+PW2llqbE9g/WabuQY7VpuzBGR0ThhQ/eTOUE77w3L26y0W2x8VaCv6Ryznsn
+uILSTbw4Swx/kGp5r67Z1rfBOIhUKnXoYOHAX4uxvBhjrIIycuxsnNU+0bJR
+VOJbOe2sNGOZo+0QmW1j4TJXh7mMj6vEU2tdNXJS+Fz9JCf8kf1QyKJUCr2+
+2WJbq7X3KZ0iMT1kxp9meSlopx3ZT612SKyDUquNU4kvJo5j6SGx/llba2vG
+FWu48KP6AT6UPnwQjUIiERcbPp6JaxZtwLgYlV5mOem8oLUFShdEFyMAVFRU
+AFiwE+EWJU9FRREiPAVzriDO+Aao4EBtmF4XUeEptV7hkclGG0cHlUaiDRgf
+zw2ICPuNILyQRMd5qV7Cpqu8+FMqM85zapuC2yIe427HZ3T868QV1FLLCWFA
+hsgBBkaGgc95ZptltRenEnEqUQfWP54XFn999BsHVzHxDpGde/Ucb2uYxM9X
+1zw1KEnU9kwL/3gGhFwa443ELrHhK6fOYsN9sfFBbEFNp7a3oxf6XN3n6jYc
+fLULbTK+UxM/ZzynllhaG1yH2YUpGY6O835iy8Z4Ouk43LbJ9lcLXk2ztNPE
+BG/dNugGRJSl8NyN13bjS4W/tBmktGZ9Sxc2cPsX2z3fvpXgr7EE551T5dsp
+sS2j7Z0Sll43mUZQDq3XTDgI5RpNavpqF7KgjCCtLfLSbTDjxwOidMHG2q+P
+3uHrT6nEmlacLYgLjIsJIZLor7xWyms1naHtjpBe0gtVNMbH81aZMa34ShAM
+QViAQMGEt/rOq3HWl0QikUgiDqUOX6kGA7vl6zU4+yW+U84s51WVbBaqz1yd
+I2TXUDiOThzpGEc6xq83z2qnrRsmFCm1/qP6MCb+keIuL+KIr8do+F89rc4W
+WxwqcSh5sNDgQVBTrWuuFURU8JjZMxP+2VIJ2qkrxuH2iSfGmBhvOpGHEz8e
+E5F9khO+9LrJifGl1z1WW4QE5230t5TKqyUorX6c1Ua5jKkNUdYSf96pwXut
+vTA/DlLZ6R9PCGbjMD/+tmZsZ5W9Xqjhwo/s5258RsdjNDxGwx+s1YLZajx/
+Lt2nI4LI8J2SseLj+bjZIzP+VusJakoltTEZTTl7lhM/HpRrpOE479dVv/6g
+rhPU91pLH4VGzNGINtkm0Ql3t01jwj9XiueUdue0R2J9JNYHvAYlpRmU+GbI
+X6DggAEFFHY1IwsmfqVy4qxrxiG80BYbW7ftUdsptf4W2zozeKn1UNkfD4lO
+qCOyZ66+6om+HMfR8dqsw8j4T1kpaOm8lkQyYECBggMHAgA0clJYlFIy/qP6
+NyDiTY210U028e/NF6RUWgtzGWEu44/up17EFZRuk22c1sZp7QfxzbjOCVoX
+kt3RC1tSfNWxdzPiaheuxPCPXfhXg9lWTWuNZJ9YPfQ001wxqO/0ufpIi/ts
+eu3FWS0jrbV/hD/lsWdauIev/5T1TmwlTXGfq/d6oUXJRGS3evvD1n90fwSq
+RWxZEWVqI0fIfkovzrVqPHdKxpOv31D8RMVfrZ074Rsf/am92kqb8emky9RG
+i9KP7tO0Nk1rz1ib9hI/Y0pltVV/mFCkeKFvF9akxBlrq0wofgTK1+V4jIzL
+oLakl07Jahl/M2KvFyaQMIHB6aST6LhObYPA0PaP7vc+NgiLozY2id12rfDH
+U+uZ9cz2119SvQRtg5T0p1eCmdo57S22aVR9xgtTL+JKY/zBumkXrqB0E7Td
+ouEP3gleqi/GIYwQJNGoBOExiKmmcw6QqdmiBgMe1HdWkOorbyZGGFpIqEEI
+ASEkAiI0REAEhjnnlNsDIAJCiGRn2hAaQhx53SmSkI4LKsItuzSW5RPgKSc3
+UsQ5zvtTdMFmSH/w64P6pGjPWM3ApiHvn5loU0BrhOmFf41/LVTbv4rgPJPu
+2SrkkIGcpHZaUo0eoKwTaWrZgvsVCl/Sbz2C6HKbnwMa5E9IuhFJZIB2GqGa
+ITSQlormNE9emQCLWEkpgmpoXLrzB08e+GUkwXIRJJi7DJvHi4kQQRlSuvD3
+LJ0Kok7/uA==
 ====
