--- a/mgutab.d/20-orig-noncomm-serial-and-oneshot.1
+++ b/mgutab.d/20-orig-noncomm-serial-and-oneshot.1
@@ -1,12 +1,14 @@
 begin-base64 600 -
-KLUv/QRY1QwANhhbPjCLqA2EZEVGRASExPg28B5VgdNw2gXQE0ZoJfarEX5a
-/US4T+wcfEHtwD5g/NGu5qzs7u5u/NcLmxRUOR0MTABKAEkAcV4Ia5uYOgcZ
-jnPKJApvaOu71OKKoW2pqMt6UeYfLkxcG31XfCe08FEqYAJC4tKAUqEQsCht
-Ih9bAE3jPE44zeUeoq5j4x8QnKpUAm0p0fAL5BVlIfMdpSdl2AS/QN5zRhgl
-hRN2COQhkG825EyHXOJ4EC23fZPGaCWNty2YiQgAFwYIFFTUgAMcIi46yR3O
-e0Jdy1lp8NUZMSr8p/OfzleUhkPeGNlMJB5iuaXhKYQ8puEYp4xpvNdOay0k
-Gh8ZdaON92ReUaSPWyf3UHiGzCNsvoNtIFpufCO92L5YcRTMbVLmoQouo/Sn
-Cu7hwsVWoCeVskqIKbwwbBwL5zzgRlbXEc9an41YZqbHPByWsWWml1DyjSO2
-kUJZH+wFEhARCS4GOt6HXw8Aa3a3iNgjF+VOZBnheuWLZutWETslVyy1SaMi
-BKIKpopkzBEic3jTwAmqH/ez
+KLUv/QRYJQ8Ahh1sQCCLOgeESPoHAAZsSPtCjJ7n2Lpmr8MWWN0+NnhXqG5/
+rKiYYjKhyEXF/W4AAocUAHmVUkoppWhpptsGGMB9mAZcAFkAWwCVa8ABUupL
+JKD22SBudFqvnTVLeb21GiFk4ocFniLeJb5YtlhfjXVL5do4u5Rth4nWf6bt
+V+cqscSsFQDxkME8mFAmBCRUYYojDPB94gaJ2Nl+ozRqeJ6j4i8KJaMJY4O8
+r1yn0HNYD4r4EO8tPFvrwo4PdJ2nzRpj82q3iFz8JvrK5ZFtDdU+eV3Gb6L3
+Wqec1MoqnRM9J3qPBjDbAKpIu+MDHWPVzompndktGogLAIwDBAwCGMKPxH8i
+iCbO6FPXezE8NfVWuwOJ3Sj0VnuCyHY9NZ5W0otJb5B5uCTAGPCZMY1J7NZJ
+UWGHtB3SduXqjIAYH+EK5FGc52TYFFC7u3gKFqjtzBlXjC0gnf8wBZOJUXBZ
+kLm4xrqkNMTCh1KvVYROc71Y42uplpV4fCG32RKyEtdYJ9lGrgWqPs+1QJLF
+j07fQo0jGWLnvdd77cxaV3vyntuII9VmbUSHCxNhAa+W0kultnILEQB2vjIk
+6XZrdreI2CMX5U5kGeF65Ytm61YROyVXLLVJoyIEogqmimTMESJzeNPACXtO
+TLg=
 ====
