--- a/mgutab.d/25-oc-oneshot.1
+++ b/mgutab.d/25-oc-oneshot.1
@@ -1,21 +1,23 @@
 begin-base64 600 -
-KLUv/QRYVRkAhvSzQQDLqg0kZayqqqqqDBS11WKqqTtF9sxNtg0IG95i6hHF
-eEBmj1YwXPHRQhGr85aBsyWcP5Hd3d11LfBa/f+/IpaHogCgAKIA9daN994R
-gltB4SctcFR6Gey5zNbJvlGoj1Rc5n2diUe7scW64kq16sRZOgWj1adMeOsF
-UjjhUdKpbdY1z1BIj8W+kVDvWP9hfbx072qvlvhGiFAnxlMKXyb8oxOT2WSl
-Lit1Eg4fiPd1JLB2CuPFVud58aQYNopWXIMIT6W868VjtVtviu/FATgVFxYS
-HjiOeygwm4EmNRDAp9VXqr7hbBwXpjDuerXGF+fcncJZ102kN5E+2prvlBJr
-KqWsuR718hlGH6e8ltI6Z97Ye6/Avg4LyIEScpB0kamLTkAY2EekUt4D8qLY
-FxEz3XPumauW2GJKA2xsKjYbKYGTsclspY6HocBVSnjs8yDeR2OBEyteqEp9
-lHrqbO221+X6zPbq4Klxl+tfHeKtV8+N6604Qngw9NMHz2wXExYMEmgpISBS
-HaAGFY9U1pnn3JZWcIEZKnxHKXyBfZTZ0r0zrpVTnXgI9s1QPyJ6bpOYFJkN
-gsYDiUnBiVNTqmfNl668r5N9IB78ZQK4dUDvkT6zIdBoNBoNhUf6SC/F+2pq
-cURHB+yAfqXqHhGPiHVjaSXGk3Z0QM/jKyhcdQpPIF7SAlVa+kaDBQ4uIHAm
-opSzUmlxvSsvvKjgUESq566yVhuLfSGfcNb1Wg8YOmZYRMhYoHEgQ4MzIM5s
-N9V55+nF+qzr0V5Zc8Z7t17gBRhXuTgHSU+JgCCRl014kMh/dGI+oOfyUeJJ
-caU15MFPLWELB77hJIwYOhooQECAAc2FkrDjffHmnam+Mk9u5X00VMiSethH
-57aVSigKcRhX9wjpqBaf0XrMF2tNN9bZBfU0l2eFetSX6kkt1TlHVsqrjHBa
-iMeZcZ03z4tdFgIgIFBi0tEdiDzWs+mjow11NJTHeOxiZ19hRITd4HhsYQYN
-0RmMDs0bPWu9u380e+QQPIoEUJQCCgC5fArC8Pa9grfiQ8SqvdxUWoMEV4M9
-hseNnSUaSab2w3qwog==
+KLUv/QRY5RsARrrFQwDNqA0kZayqqqqiUBe+lbtF4JYiRGaGXr2xeqD4FpsN
+/OTPSCaC09vqOYTZrmYy7pyCdTmR3d3dbSghAPr/f0UsDwG3ALEAsAA4Snww
+dNQI52gaFRkMEmhJISBSXW/deO8dJTaYFs7SAkmmj71+42ip2EcSddKKx7wv
+deLRbmyxrrhSvULxmJQCEutVK7zlAimw8Cjp1DbrmqeopMNg34mop2YeNPPx
+0r2rvVriGyVEXIiPKXSt8BEuBEeLmXrM1FE+fCTelyqBN6gwXmx1nhdPumHj
+iMU5mHCVy3cuHqvdelN8Lw7gudDIkBCxbVtEAZkMXLkBAYBanbXqGB5t2wIe
+DRY40IDgqYhSzkqlxfWyvFDjwmMRqZ67ylotDPaVgEJZqt+cwrjr1RpfnHMK
+FcpS/VT6U+mjrflOKbGmUsqb7lNqfgPp45TXUlrnzB57b5jXx8WAHy3hB0of
+nfqIBbR5/YTK5T8kP4J9EzHTPeeeuWqJLaY0gAfGBQaGlODhwOBoJpC3ocBf
+VDgM9CTeN5sBK2C8cKX6KPXU2dptb9c9R3OB+NzwrnsXiHjr1XPjemsibtN1
+kZKe0uKyWY/5Yq3pxjrTpPyM5mdEPepL9aSW6pzjjMu/nPCZiMeZcZ03z4u7
+CiCHFY9U1pnn3JaGdOCGkAcxhTWvjzJbunfGtW4rFBe9PlnKn4x+0yimBUeD
+0PGAYlp44tSU6lnzpSzvS8U+EhFeMwHUuNB7pedoCDqdTqdj4ZU+0kvxvppa
+PAHCgVzoWav+GfGJWDeWVmI8KQgHeh6HaeErVIgKcZUW+CLTAxEbN4ZkeJIJ
+71Q8Tow3vVTv+cGlX1D1KLHMW2ep6+z0s9PDQh9S8YhzxlTnvPGp9DEawg/H
+V6bu4aNrAIErKmGkFdM9Z8WYIyMCx4KOAxwdngFxZrupzjtPD9ZlqR7tlTVn
+vHfLBVp48VXHP1C6ygQMmXxswodMfoQLAQI9mo8ST4orrSIRjpIJZT7wDixh
+3NDRQAECAgx0LKiEnPfFm3em+so8N5b3zVLCGNW/RvqmsV7CUSQgUGKOmR5/
+e11jNzhkPy5sDRHHenb66IihjsbyGI9d7N1XEBFhNziOLczYEJ2Z0aFpo2et
+v/tHs0cEwUeRBEUpoADI5VMShnfvFbQVn0as0stNpTVIcDUYx/C0sfNEI8n4
+HjnLA7I=
 ====
