--- a/mgutab.d/30-well-illust.1
+++ b/mgutab.d/30-well-illust.1
@@ -1,81 +1,86 @@
 begin-base64 600 -
-KLUv/QRYhW4ACvL4L07Qiqza0DGRlDH1MEo9jAJnxIrOcaLe6kOM+VN67O2s
-8wk/JduNlgMPTllKv+EnPk3AFIq5zs6ynD1FkRoaKbu7u7u/nB8wllHqoTlf
-2ATtAuUC5gI2hMUTwXWoGe9Ex3bh0C4lvVbafOUL14nYHvQZcbDIIIHII4WS
-SjhzpagwAQQWJjgwwTPOlcoMZ7Ux3HuA+WAnG3ayQR8b7GS7hHfWKLGlgWmW
-rQtx0l7zlbLmfGXs1pWwdSQlvmf2frOFFsIIZ43sd1h+BmK/Zl4BfmOmc1IK
-JXbWjPfSslNCdgz2LdqHwPYGCwyTBF4tlTNfbKsoV/s6XtsD18U8tsjlxLbC
-HCGJVGHCIGXIkLCS2Tsr2y+qhzCMSBimEkXIob0wT5qrDs6WSdE1O1+CpiG4
-2ECiAPSBKfmeju9p0Tonu+O1RcD0B9k7jVTOHGmdopXT22zvs1orIZzTWqBQ
-U30nN5HefCWts2YvkUwWHEqmDByuw5H5Etp7vdbamim8IiTvAtuokfdY6cSR
-3ls3KpgqWFzP4vBkqe0xxlqnlTaGKhqgcICigsKBkNOcpZQ4yimTxULwi+q5
-2lcj+xIr2umc8uIc4X35hfUIK6pNQ+0cD0CfWGrTUNunlXliKu9V1V5Ve5tN
-d9z8jYoekSoq/NYsL6X2xpIXXYLrQk5jnNlSeKWMR6dUf9PyPMhopzXja6+N
-0roJz9OkfDbam0g9DexpJNvvxRlabOeNoGG68Jr9DYdHo3oZFd2ifa32NpoG
-fWw0Xat9i/YcK89hhRnLKG/9WP3J1plwbI/VVp18KyC+GB5PB/f5xDRmSCWc
-NyZfI/uPkQ/x4YVqZN+j8vmdNtZ86Y031iZh6RPVe4XyyojjjdVBaA9C+5Nb
-J0L2sZJ9cusc4iirzRLPUChEemCCkN9ba6Y0wkrCsnOyDfqIRDnZFokcS0gn
-rnXaHRDPZfMiLs8jhrXGGm9HTKvo7Npq37S+hfqPAC6br7F5HJn3C+oRNjKY
-NlwYkRAAfVhutEfJw2Rvo3rUyPu0MMYrZ5UX1CPgcJ2I6zuQ2TGSB31Stg7H
-5fmEuN6Z4ZwDmC6QLDYAIIAAAgAggsyLB+p4bZ2T/cp1nwACCPpk61gw7ZRG
-jC+m9dJsX42LFpUsSBgjjYwNEzznKiW29F6WPSN7ELeuleKJmP2MSuNWtEdM
-65QxTgwu+AX2F8rG4bqamnapbY9xzjnxrXUF0yJmr7p1ElYwPeL6HpEXeZb1
-VplrPJGiUyPfkvMlOp/bWLOs1kJrQUlCk4bJ4cUS24mhPdF4JCp6ZXsSFT0j
-e7/3yguvnRVm50Nu3Qqm3V4I84wwq9ToGdmHYNlsGtj7vVLiHCeVJg2SBtAn
-pvUnW5dyvUyLHrF1KBCewxktvjZT15dMFg94llTmSeu0shRvhMfDPt5nzTfe
-OK1dwTTqtkMOqb0RTyxriuttZD6PmgeD2ynX76S8GtmD6HQuLcwXZ3zvyV6p
-XpbigeQ6kdNpIbTTTply7R2eTcCIlDHSKI0uoGBgAgsSKBiYwALow7p1r9mn
-bN2IEVvk0FY5M6xxUlBQUFBoZLBowG+ts0o8a7V1KpnG4byWzYc6eQ7pjDbn
-WU1AvBG4LqeiZVS0U3krvJfiGnLrPlga9FkRsWmrb+lsEjkPYsdLWX3Ha9Nw
-aMc4SiqjnBWCAygcoGgg5LXKamu1t1TKMKIgYeXhQZ9QqJRhRMFzljVaLGNF
-iYIoZ+TjhZZaK1N6noflXbKPZetkVDQNTHulFVacM64ZMkwZuJ02SlvrvRYs
-hLDRIWz0DormYXmOIbQ5zmlZI16Pygf6VDhgQsipxVZCWusIw+LCAvSpzXYJ
-mmZ9vMqmHeYb74zXyusRXDYvYsWbkT3oMwJk06R8IbBdqz2sA10D8bzmaOO0
-Mt9IaNRJ41jeYaQw4ptvKKUDnbK9jIc/rf6lo0NOoaUTQ2zrhoZRBikDBpJn
-SrO1VWIrM/lqIB7oUyJZYFAiVfB7c5022ntjZjyP1ad6PgSlHU56Z6Qws7A8
-y9aJ4DoQts/vjBDaeq/MGyWSCWNDg0cMr50TywnioWksXwLkSaBsn3HeSDOt
-12XD+vjUyDu9Nt6bZd2JlR+xdR9itmM7c6Y54ptybZRON+HEsdJbXzwbJ7a9
-TnlpxNZajZFpAQ0YRhsMCHnM+WaK48zdvoV6npmHw3U3KtpjpxPJgUAS8+mc
-bByuw2DqeG0cmr3i+ZcW3YPbfoE9lNEhdrJvInbIZ662SgipldExRhoZopGF
-Rsl0YbHBKZV53hirlMV4shjvhqJN6OwcEzrkF8pYoaT13jrUyJOUeLdzRmvh
-pTdX+15atEtMO66XxmypDUWQM/Kx1A45lTlma22uKyj6RMdO5T6Ge4f4Ugkl
-tndChQkcgIACCceOEc9IYbUhVpvE7WVCPL83S0zvxLKG2zXcFmVUyKjwKmHE
-k0YrRT5sFFtns+kbkp1zsllEtkt8bcZ2Tgt70SFgWoo2MmDwWKGEtuJYSRqM
-MCBpMHrAa6aZXgjr7YBhypAx8kizjbdaG0monoTqT6tv0d6hlHHWWGlN3boa
-kwd9Urdu9tosW1dj8jUm7/bOe3O+JecluFi2iUyDPiGNjZLpglQh5NlifHPG
-2ZZGGhsbCvjFE1Y8YY2qlx3Dfexkk3x8LmGsud4rq4kDSQOpFDKzPcA+j7nO
-SDGGNqaiYxxGFpAwLvA4L6S3ThlnVFpGp9tZ2SGXOcaaa4x1Ro9QInX4aLC4
-APQRiUojCiVSBZ7ptDTKKDVMF0aQYHl1QnvznFcBBSqI/M5s86w2yhhdZNIw
-2mCEgVtp44Q04ktxYDTok5P5cGC050pttZhel833nLyek4ciku2M8F5YbwjF
-ZvOA2CG/Vd6b850iH1+JiwZ9SBcbHUYVIlOJVOET25lhvlbOPoSti+H4brP3
-CSnGM8+cZQyZHvCaY5QRVhtbUl+L9iGtL9nZEkbMfEvqA31eWvTMyad6vgXE
-8xgxjJFKKk2gvIhCCAMBh3haDGPNEgfTOSZQGyTXuY3UUonjR4gHAsTTOdlO
-caySVgptholkwQgEjG6BaRjcbrW851nxzNXOe6PRIlDbREwAXFQPnRDxWrAv
-5DdKGaOUebrkPg86XcmUQTLAZ76Z1jhv9MDxQQz1AYmKbp0+CTgwWwf3eQjR
-jmesEEsoq4tG4dgoHNvhvfBCOyP7Fc/zsPyKjgUkCWo7HzLTJDGfyqa92hpn
-vhH7hfURNV+OCX1i6VlP1wHL+5Vx3trqptXT8auVT3b7HEaLI7VRVhWZT9k6
-18k7hTJaGGfOyPeoPof0QjwzjC6T7TLZLCa8jtcm4dk7MiJSh9LIZfOs2XuE
-cUoelu/oQHe8tkvubbKnrX7H1pGMuHa+282/kNAnPd6Hj81BA8N04VfOSTPN
-2JJIJA0bHUal0qgi5DBPmSWtea7+ZfbiucD2S8v2eSm9kEpsYQIQikqsvpuW
-5/POC2+tVeRhWj6Yls+EY8c4lHbeDLO9tJknk6J5Xt8H6ku5Ng32KSG7RfuV
-2X/M3m/Ml1IJp1zx2LnX57XOe+mk9jV7npmng7NxUlrn9j0fPpUHjcqBsLI9
-6uR1vPbL1nl8eAmv2Z/YOp6Z98p1fmHdAsPGhgkeoaVWzmvra6VxSLwSXOdz
-VptrtnFiHC3IKGHAYHFBBiYOGzxGbG2Gtd4QODrk1qVoPkXzLNd7zDDaeyW8
-JKkv56JJaq9K6RvcdgsxtFTCXEOyFK926zxOWaGlMHLcPMfN26S2w0rnnDZT
-e6L6HBNaQmh0gcMG0wEhhzPPimOUqBwIr1wnYvU31g5h6Z2UV9t5lirEgerk
-xXDo1OmjgT3MypeydV6jlfHCKesHk/9g8iO27qPl9ah8LuvENM+JZQftR7xs
-lda7bNqlpRynDzpeu6bEs2A6dus6XhuH5YGkNAumnYN0D9jLalrH42OnL6MA
-txHSeqW8t+O1cU54qJGfOWkakEeZ0F4S0znUBtGxXcp4aYxw1hnVZrm21zlp
-xffmGNKQMSHkVOJZY85ReuC6U+45YrwV7FewdzktprNaOSsOmNCAARMe8Hun
-zJPCKW1s3YfsbzZ7BEynRp6Ex4dcdgKAuqghCIIwCCGEEEMIIQ46RxnnIAJC
-iGM2NQ8QKkOKpM5wRnbcTf0a5sMflUW6Q2EBaE2ovCJa5A2AslYkstZKPg+s
-yAbSInMFLUQSUEheQ5fgG34k/ogkp5+zmSLUcxgkaA/panHStL9pBuUUDJ0M
-OvOe8zbvD8fdwdN6o1HScon3p1MV+3xUD+5m7WMfQO9UScgljQdndjGK5Zk2
-2amu+AdU6wHiWwGrPCBSGe+qxIEAdur/XfK2HVQd7Ipzl8VGsQmlTu5W/7LV
-s8mMYJbhIGD6IHb7icKOI2NMXu406W0YXn0CadZFdIAi5XrwJUxsyAYu1iGI
-Fy/U3YspUARG9TwE+dln70/o0h22c2rntaGa11fBVgBua9GlpjvGG3Gycsmv
-QWVL/oZGoQ2uUeqOttFT8IECIHUwkknoGzkdKHhMXE+oMWv/zTR+b80uXYmx
-b6nBk4CVD9AAU+oKDLus+qQABVA/DIT7E5cnd0CV1fFMYd54RY5QhnpmwNpI
-v72MFUIocCVin69DPShm1Sdltl5m4D6RhIXRONJkEmBxVkuAWDUkx+MG5C0Y
-kCO6lm9fOlxJVIKvBvekw2kvIdJWc/igEOvrMg+3uPqmnhoBLt90
+KLUv/QRYvXQAyv+UMk7Qiqza0DGRlDH1MEo9jAJnxIrOcaLe6kPMDL7CR8tX
+4Ad4dkQ3Wg49v7Qld4tfwDhCr9JsVDDHceopitTQSNnd3d395fwAo8jVDCrz
+hU0VAxEDEgMmDhsaPGJ47ZxYzpAPTWP5EyFvAmX7jPNGmmm9LZsVyKNI3um1
+8d4srQiLN4LrTjNeCo/t0qFdSnqttPlKF64bsT3oM+pwkSECkUcKJZVw5lpR
+QYIHLExoYIJnnCuVGc5qYbgHAfO9TvbrZIM+ttfJdgnvrFFiS/PSK1s3gkN7
+zVfKmvOVsFt3wtaVnPie2fvNFloII5w1sd9h+ZnMds08AvzGTOekFErsqxnv
+pWWniGzY61m0F3ntDRccTBF4tVTOfLGtolzt83DtD1wH+9gilxPbCnOEJJKF
+iQMpQ4YElWzvrGzHqB7CMCJxMJUqQg7thXnSXHVwtixF1+z8CZp+AGMDaQLQ
+B+bD93h8T4vWOdkerk3ipUPE3mmkcuZI6xStcLzN9j6rtRLCOa0FCrXUd3IT
+6c1X0jpr9hLJdNGhZMrA4Toc2X+gvddrra2ZwjtS8i6vfSJ5j5VOHOm9daOC
+yYKl9asOL4baHmOsdVppY8iCgYoGKiwqGgg5zVlKiaOcsRjsA8eonqt9NbE/
+saKdzikvzhFel2NYj7CS2rTTzuEA9IGhNu20fVqZJ6by3lTtU7W32bTHzd+o
+6BHJwsJvzfJSam/88KI/4LqQ0xhnthReGePRqNTfsDwQMu20ZnzttVFaN+F5
+mpTPRnsUqKd5Pa1k+704Q4vtvBE0TBdcs7/p8GhSL1PRLNrXam+jadDHRtO1
+2rNo36HyHFaYsYzyVhDVc9g6k479odqpk29F5ovh8XRwn09MY4ZUwnlj8jWx
+ByH5ESBeqCb2PSqf32ljzZfeeFvtkpU+Sb1XKK+MON5YPYT2IbQ/uXUkYg/7
+sE9unUMcZbVZ4hkKhUgOSBDye2vNlEZYS1h2LrZBH5EoF9sikWMJ6cS1TrsT
+4rVsfqTlecSw1ljj9YBpFZ1dU+0b1rNO/wmgZfM1No8je8egHmEjg2nDhRHp
+ANCH5UZ/fPhX7G1SfyJ5nxbGeOWsEoN6BByuG2m9CNmGlTzog7J1OC3PJ8T1
+zgznFMB0gXShAQAQIEAAIILsxQN5uLbOyXblug8ECAE93xLieYwYxkgllShQ
+XkQhxOEAh3haDGPNEvfSOShOOyTXuY3UUokjiIgnE+LpnGynOFZJK4U2w0Sq
+YCQDo1teGga3WS3veVY8c7Xz3mg0idNGEaM5bN3qpZ3SiPHFtF6a7atx0aLS
+BYnDSCNjwwTPuUqJLb2XZc/EXubWsVI8ErOfSWncivaIaZ0yxnnBBcfA7kLZ
+OFxXU9Mute0xzjknvrWqXprE7FO3ToLqpUla3zPyIs+y3ipzjSlSNIrkW3L+
+g87nNtYsq7XQVlCS0KRhcnixxHZiaDlovBIVrbJ9iYqeib3fe+WF184Ks/Mi
+t0710m4vhHlGmFVq9EzsR6xsNs3r/V4pcY6TSpMGSQPoE8N6DluHar2sRZPY
+upOM53BGi6/NtPUl04UDniWVedI6bSzFK/HxL5D3WfONN05rVS99uu2QQ2pv
+xBPLmtJ6G9n3UfNgcBvV+h2UVxP7EJ3OpYX54ozvPdmq1MdSvJBcJ3I6LYR2
+2ilRrb3DswcYkTJGGqWRBRULSGBBQsUCElgAfVa3zjV7lK0rUWKLHNoqZ4Y1
+zoqKiooKjQwXDPitdVaJZ622LhXTOJzHsvlOHJ5DOqPNeVaTEK8ErsupaJmK
+dipvhfdSXEVuHchKgz4rJDZN9SydbSLnZXa8FNV7uDZNh3aMo6QyylkfMKCi
+gQoGQl6rrLZWe0ulDCMKElQgHvQJhUoZRhQ8Z1mjxTJalCiIckg+XmiptTKl
+53lYvhX7VrZOpqJpXtorrbDinHHNkGHCwO20Udpa77VgYYSNHmGjd1A0z8pz
+DKHNcU67IvF6VD7Qp4IBE0JOLbYS0lpHHC4wLkCf2myfoOkVyKds2mG+8c54
+rbweoWXzJFa8mdiDPiVCNk3KJ/Latdq/ROhaiOc1RxunlflmQp84NI7lHUYK
+I775hlJEaJTtZSCeQ/UuHR1yCi2dGGJbNzSMMkgZMJA8U5qtrRLbmMlXC/FA
+nxLp4oISqYLfm+u00d4bM+N9qB7V8yIn7XDSOyOFmYXlV7ZuBNfJ2D6/M0Jo
+670yb5RIAR2kf7w+VtM6Hw/j+DIIcBshrVfKez1cGyeFdyL5GQ5NE/InFNo/
+wHTutGU8tksZL40RzjqT2qvW9jonrfjeHEMaMiaEnEo8a8w5yg9cx5H7jhhP
+9XrV611Oi+msVk4LAyYwUMAEB/zeKfOkcEobWwcS+5vNLvHSKJI38fEhl50u
+xcqT2LoQMduxnTnTHPFFtfZJp5tw4ljprS6ejQPbXqe8NGJrrcbIpIAGDKMN
+BYQ85nwzxXHmbs86Pc/Mw+G6GxX9sdON5Dwoifl0TjYO12Ewebg2Ds1W8fxL
+i+7BbcfAHsrwADvZNxI75DNXWyWE1MroHEYaGaLRhUbJhHGxwSmVed4Yq4zF
+eLEY74aiUejsHBQ65BfKWKGk9d66E8mXnHi3c0Zr4aU3V/teWrQLTDuul8Zs
+qQ1BkEPyMNQOOZU5ZmttrisoOoXHRuUehnuH+FIJJbZ3QgUJGniAQknHjhHP
+SGG1I1TbxO1lIp7fmyWmd2JZw+0abosyKmRYeJUw4kmjlSMhNoqts9n0TcnO
+OdksI9slvjZjO6d9vegRLy1FGxkweKxQQltxrKQMRheQMhg54DXTTC+E9Xrg
+YMqQMfJIs423WhtNpN5E6jlUz6K9QynjrLHSirp1NSYP+qBu3cy1V7auxuRr
+TN7tnffmfEvOS2ixbJOYBn1CGhslEwapQsizxfjmjLMtjTQ2NhLwiyeseMIa
+Uy8bhnvYyS4B+VzCWHO9V1ZTB5IGUklkZoN4fR5znZFiDC1MRcM6jCogcbDA
+47yQ3jplnElpmU63s7JDLnOMNdcY64weoUTy8NFwYQHoIxKVRhRKJAo802lp
+lFFqmC6UMLHy6oT25jlvAglUEPmd2eZZbZQxusikYaTB6AK30sYJacSX4sBo
+0Ccn+3BgtOdKbbWY3pbN93B4PRweyki2M8J7Yb0hFJvNI7NDfqu8N+c7R0C+
+Dy4a9CFhbHgYWYhMJZKFT2xnhvlaOfsRti6m47vN3iekGM88c5YxZHLAa45R
+RlhtbEF9LNqLsP7DzpZQYuZbUB/o89KiZ04eFQB0kB4y0zSOrXrpDpl3iOGM
+EFyzH/HSED4l0oaRhlHGaINJw+PFOdZr66yd0DI9nkr2HiOUl9pqJYmPz8m+
+nOzzOPGcLjCNg9shv3laWPG0cYSNBrHSKSK0wwmzxHhaSXOyXzw2CgmPZuP5
+nBJfnKO9LDd6BfIqt86vlXNKbLElkUgkD6MOow5+KaQ1Zwmry9bJWl4KpVE9
+L/LaKbifqXws2vusdNY8LZyhFCMe6/WF/EYpY5QyT5fcB0KnK5kySAX4zDfT
+GueNIDo6gJ06KFHRLI5PAg7M1sF9IES04xkrxBLK6qJROjZKx3Z4L7zQzsRe
+xfM8LL+iUwEpgtrOi8x0ScyXsmmvtsaZb8SOYb1EzZeDQnOs9KynE8HyfmWc
+t6a6YfV4vGrli90+h9HiSG2UVUX2KFvXOnmnUEYL48wh+Z7U55BeiGeGsWWy
+WyabBYXn4dolPHtHJiJ5KI1aNr+avUcYp+RheQ8R2sO1XXJviz1N9Tu2roSk
+tfPdbv7FhD7p8UKA7A4aHEwYfuWcNNOMLYlE0rDhYVQqjSxCDvOUWdKap+pf
+Zi+ey2u/tGyfl9ILqcQWIgCh6ITqu2F5Pu+88NZaRx6m5YNp+Uw6doxDaefN
+MNtLm3myFM3j+kBOH6q1aa9PEdks2q/MHmT2fmO+lEo45crHzrk+r3XeSye1
+rtnzzDwdnI2D0jq37wnxpUDoU84Dle1PHJ6Ha7ts3UeIl+Ca/Ymt45l5rlzn
+GNYvMGxsmOARWmrlvLa6VBqnxPuA63zOanPNNk6MYwUZJQwYLizAwNRhg8eI
+rc2w1jsCR4vcOhTNo2h+1XqPGUZ7r4S3BPXlXHRJ7VMofYPbbiGGlkqYayiW
+4tVunccpK7QUxo6b77h5G9R2WOmc02ZqT1Kfg0JLCI0udNhgMiDkcOZZcYzy
+lPPAletIqP622iIrvYPyaju/SoU2SHF4MR0axfHRvB5m5UPZOq/RynjhlDWE
+yYcweRJbB8LyelQ+l3VimufE0oP2JV62CutbNu3S0g6ODjxcu+bEr14adus8
+XBtn5YWg9OqlPYDIqCEMgjAIIYQQQwghzkEIjXMgAkIIZDU1DxAqQ4qoleHt
+lgCQJrIFAVGhBwjob7Mthl+QBJLzvP1goiQUvW+AjO84PPWLnQ9oqixSEwoL
+QGdC5XXQIi8LVLAiUbSK8ifOapRAMgjHKEIkgYbyNYTkmfEj4UckTToUC1OE
+ZQ5DB+0hnT9OmvE3zaCcgqHUgg7Es9Sm18M/ckJj3muUdC5h/OkExW8fHdo6
+BvtYBNDLtSTkRuMB83SMYnqUmURSV6DCh3lgZasnKvaCVP67SnsgpTvUz1zy
+aB0cGiATn5H1RckNJS13c/+y7ymJNfhHOOyKPpy8/b2w7wgXk9I7jcT22Ev2
+APRyEcuiSDJP48QCAzhwHc7+vtCkErqYFEVgRa+HoDv73HnGly7XOEPYvPhW
+g1IVehFg+Fo0oeks8cZFhpXUGEJs6dzQzfTa9bPu9n10AH9BAEYOxklCl8vp
+UIBj4vRki1nLb6Yj7q2JpGsHNnkKHRK2cgc6YYUEBZpItj4ZRIHXD0bCbYiU
+RRwEZUE8nIWXXpsjpoYEFdxqpDVeBgjICnARKc3no/4Usw6T8qAuM05fksQ5
+0KA0nYU1nCUJwVB5/nhnQJ7BgHRROvrkUssqnBIcNSiTfgx6AZmwep6vETK5
+9vNwE6pviqsBOCcNTQ==
 ====
